# mistral-extra

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  AUTHORS  CONTRIBUTING.rst  README.md  README.rst  Vagrantfile  bootstrap.sh  local.conf  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: conf.py  index.rst
examples/create_vm/: README.md  create_vm_example.yaml
examples/openstack/: keystone_actions.yaml
examples/v1/create_vm/: create_vm_example.yaml
examples/v1/vm_job/: README.md  run_vm_job.yaml
examples/v1/webhooks/: README.md  config.py  demo.yaml  tasks.py  version.py
examples/v1/webhooks/api/: app.py  client.py
examples/v1/webhooks/api/controllers/: root.py  tasks.py
examples/v1/webhooks/cmd/: run.py
examples/v2/: multiple_services_registration.yaml
examples/v2/calculator/: README.md  README.rst  calculator.yaml  requirements.txt  web_app.py
examples/v2/capabilities/join/: README.md  README.rst  create_vm_with_volume.yaml
examples/v2/openstack/: README.md  README.rst  crawl_specific_data.yaml  glance_actions.yaml  keystone_actions.yaml  nova_actions.yaml  update_kernel.yaml
examples/v2/openstack/clone_vm/: README.rst  boot_vm_from_volume.yaml  clone_vm.yaml  clone_volume.yaml  input.json
examples/v2/openstack/tenant_statistics/: tenant_statistics.yaml
examples/v2/services_registration/: README.md  README.rst  multiple_services_registration.yaml
examples/v2/services_registration/vyatta/: README.md  README.rst  vyatta_firewall.yaml
examples/v2/services_registration/zabbix/: README.md  README.rst  zabbix_machine_registration.yaml
examples/v2/tenant_statistics/: README.md  README.rst  tenant_statistics.yaml
examples/v2/vm_job/: README.md  vm_job.yaml
examples/v2/vyatta/: vyatta_firewall.yaml
examples/v2/zabbix/: zabbix_machine_registration.yaml
examples/vm_job/: README.md  run.py  run_vm_job.yaml  web_app.py
examples/webhooks/: README.md  config.py  demo.yaml  tasks.py
examples/webhooks/api/: client.py
examples/webhooks/api/controllers/: root.py  tasks.py
examples/webhooks/cmd/: run.py
mistral_extra/: __init__.py  config.py  version.py  workflows.py
mistral_extra/actions/: generator_factory.py
mistral_extra/actions/openstack/: actions.py  base.py  mapping.json
mistral_extra/actions/openstack/action_generator/: base.py
mistral_extra/actions/openstack/utils/: context.py  exceptions.py  keystone.py
mistral_extra/monitoring/: base.py  launch.py  monitoring_server.py  prometheus.py
mistral_extra/monitoring/collectors/: mistral_collector.py
mistral_extra/monitoring/jobs/: delayed_calls_recovery.py  idle_tasks_recovery.py  named_locks_recovery.py  subworkflow_complete_recovery.py  subworkflow_start_recovery.py  waiting_tasks_recovery.py
mistral_extra/resources/openstack/workflows/: create_instance.yaml  delete_instance.yaml
mistral_extra/tests/unit/: base.py  test_base.py
mistral_extra/tests/unit/actions/openstack/: test_generator.py  test_openstack_action_serialization.py  test_openstack_actions.py
releasenotes/notes/: drop-py-2-7-0d2aa8bcea5ff645.yaml  move_openstack_actions_from_mistral_to_mistral_extra-70ad20eb06621f6c.yaml  remove-glare-support-f31592ead8742ce8.yaml  remove-murano-and-senlin-92e0706e778ff480.yaml  remove-vitrage-support-d1a71333b6d56c39.yaml  switch-volumev3-to-block-storage-ea7aff76e436f692.yaml  update-create-instance-b4f64fa0017f35d3.yaml
releasenotes/source/: conf.py  index.rst
simple_app/: config.py  demo.yaml  tasks.py  version.py
simple_app/api/: app.py  client.py
simple_app/api/controllers/: root.py  tasks.py
simple_app/cmd/: main.py
tools/: get_action_list.py
