[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "mistral-extra"
description = "Mistral OpenStack-specific bindings"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
  "Environment :: OpenStack",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://docs.openstack.org/mistral/latest/"
Repository = "https://opendev.org/openstack/mistral-extra"

[tool.setuptools]
packages = [
    "mistral_extra"
]

[project.entry-points."mistral.generators"]
generators = "mistral_extra.actions.generator_factory:all_generators"

[project.entry-points."console_scripts"]
mistral-monitoring = "mistral_extra.monitoring.launch:main"

[project.entry-points."mistral.preinstalled_workflows"]
workflows = "mistral_extra.workflows:get_preinstalled_workflows"

[project.entry-points."monitoring.metric_collector"]
mistral = "mistral_extra.monitoring.collectors.mistral_collector:MistralMetricCollector"

[project.entry-points."monitoring.recovery_jobs"]
delayed_calls = "mistral_extra.monitoring.jobs.delayed_calls_recovery:DelayedCallsRecoveryJob"
idle_tasks = "mistral_extra.monitoring.jobs.idle_tasks_recovery:IdleTasksRecoveryJob"
named_locks = "mistral_extra.monitoring.jobs.named_locks_recovery:NamedLocksRecoveryJob"
waiting_tasks = "mistral_extra.monitoring.jobs.waiting_tasks_recovery:WaitingTasksRecoveryJob"
sub_workflows_start = "mistral_extra.monitoring.jobs.subworkflow_start_recovery:SubworkflowStartRecoveryJob"
sub_workflow_complete = "mistral_extra.monitoring.jobs.subworkflow_complete_recovery:SubworkflowCompleteRecoveryJob"
