[metadata]
name = mistral-extra
summary = Mistral OpenStack-specific bindings
description_file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/mistral/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[files]
packages =
    mistral_extra

[entry_points]
mistral.generators =
    generators = mistral_extra.actions.generator_factory:all_generators
console_scripts =
    mistral-monitoring = mistral_extra.monitoring.launch:main

mistral.preinstalled_workflows =
    workflows = mistral_extra.workflows:get_preinstalled_workflows

monitoring.metric_collector =
    mistral = mistral_extra.monitoring.collectors.mistral_collector:MistralMetricCollector

monitoring.recovery_jobs =
    delayed_calls = mistral_extra.monitoring.jobs.delayed_calls_recovery:DelayedCallsRecoveryJob
    idle_tasks = mistral_extra.monitoring.jobs.idle_tasks_recovery:IdleTasksRecoveryJob
    named_locks = mistral_extra.monitoring.jobs.named_locks_recovery:NamedLocksRecoveryJob
    waiting_tasks = mistral_extra.monitoring.jobs.waiting_tasks_recovery:WaitingTasksRecoveryJob
    sub_workflows_start = mistral_extra.monitoring.jobs.subworkflow_start_recovery:SubworkflowStartRecoveryJob
    sub_workflow_complete = mistral_extra.monitoring.jobs.subworkflow_complete_recovery:SubworkflowCompleteRecoveryJob

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = mistral-extra/locale
domain = mistral-extra

[update_catalog]
domain = mistral-extra
output_dir = mistral-extra/locale
input_file = mistral-extra/locale/mistral-extra.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = mistral-extra/locale/mistral-extra.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
